--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <html>
     <head>
-        <title>Hello</title>
+        <title>UsWorks</title>
+        <style>
+            @import url('css/general-sans.css');
+            .text-black {
+                font-family: GeneralSans-Semibold;
+				font-weight: bold;
+				font-size: 60px;
+				text-align:center;
+				margin-top:40vh
+            }
+        </style>
     </head>
     <body>
-        <p>
-            Hello 世界
+        <p class="text-black">
+            UsWorks
         </p>
     </body>
 </html>
