change color scheme

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
             @import url('css/general-sans.css');
             .text-black {
                 font-family: GeneralSans-Semibold;
-				font-weight: bold;
-				font-size: 60px;
-				text-align:center;
-				margin-top:40vh
+		font-weight: bold;
+		font-size: 60px;
+		text-align: center;
+		margin-top: 40vh;
+                color: white;
+            }
+            body {
+                background-color: black;
             }
         </style>
     </head>
