--- a/index.html
+++ b/index.html
@@ -1,24 +1,62 @@
-<html>
-    <head>
-        <title>UsWorks</title>
-        <style>
-            @import url('css/general-sans.css');
-            .text-black {
-                font-family: GeneralSans-Semibold;
-		font-weight: bold;
-		font-size: 60px;
-		text-align: center;
-		margin-top: 40vh;
-                color: white;
-            }
-            body {
-                background-color: black;
-            }
-        </style>
-    </head>
-    <body>
-        <p class="text-black">
-            UsWorks
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UsWorks</title>
+    <style>
+        @import url('css/general-sans.css');
+        .general-sans-semi-bold {
+            font-family: GeneralSans-Semibold;
+        }
+        .general-sans-regular {
+            font-family: GeneralSans-Medium;
+        }
+		.img-sm {
+			background-position: 70% center;
+		}
+		.img-md {
+			background-position: right top;
+		}
+    </style>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-black overflow-x-hidden">
+	<div class="bg-cover w-full bg-fixed h-screen bg-full img-sm md:img-md" style="background-image: url('img/classroom.jpg');">
+		<div class="flex flex-col items-start justify-end md:justify-center ml-5 md:p-20 h-full">
+        	<h1 class="text-white text-4xl md:text-7xl bg-black bg-opacity-100 general-sans-semi-bold md:mt-20">UsWorks</h1>
+			<br>
+        	<p class="text-white text-sm md:text-2xl bg-black bg-opacity-100 general-sans-regular">
+				UsWorks adalah majalah literatur dan seni 
+			</p>
+        	<p class="text-white text-sm md:text-2xl bg-black bg-opacity-100 general-sans-regular">
+				yang dibagikan secara gratis.
+			</p>
+        	<p class="text-white text-sm md:text-2xl bg-black bg-opacity-100 general-sans-regular">
+				Majalah yang ditulis dan digambar oleh kita,
+			</p>
+        	<p class="text-white text-sm md:text-2xl bg-black bg-opacity-100 general-sans-regular mb-20 md:mb-0">
+				untuk kita dan komunitas di sekitar kita.
+			</p>
+       	</div>
+		<div class="absolute bottom-4 right-4"> 
+        <p class="text-black md:text-xl text-sm bg-opacity-100 general-sans-regular">
+            Arts by Yuzu Hoshizora
         </p>
-    </body>
+        <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
+            Website by Chi
+		</p>
+    </div>
+    <!--<div>
+        HELLO
+	</div>-->
+    <!--<div class="bg-cover bg-fixed bg-center h-screen" style="background-image: url('img/sky.jpg');">
+   	    <div class="flex items-center justify-center h-full">
+   	        <h1 class="text-white text-4xl bg-black bg-opacity-100 p-1 general-sans-semi-bold">UsWorks</h1>
+   	    </div>
+	</div>-->
+</body>
 </html>
+<script>
+    console.log('Width:', window.innerWidth); // Check the width in console
+</script>
