--- a/index.html
+++ b/index.html
@@ -15,32 +15,29 @@
 		.img-sm {
 			background-position: 70% center;
 		}
-		.img-md {
-			background-position: right top;
-		}
     </style>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-black overflow-x-hidden">
-	<div class="bg-cover w-full bg-fixed h-screen bg-full img-sm md:img-md" style="background-image: url('img/classroom.jpg');">
-		<div class="flex flex-col items-start justify-end md:justify-center ml-5 md:p-20 h-full">
-        	<h1 class="text-white text-4xl md:text-7xl bg-black bg-opacity-100 general-sans-semi-bold md:mt-20">UsWorks</h1>
+	<div class="bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.jpg');">
+		<div class="flex flex-col items-start justify-end sm:justify-center ml-5 sm:p-20 h-full">
+        	<h1 class="text-white text-4xl sm:text-7xl bg-black bg-opacity-100 general-sans-semi-bold sm:mt-20">UsWorks</h1>
 			<br>
-        	<p class="text-white text-sm md:text-2xl bg-black bg-opacity-100 general-sans-regular">
+        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
 				UsWorks adalah majalah literatur dan seni 
 			</p>
-        	<p class="text-white text-sm md:text-2xl bg-black bg-opacity-100 general-sans-regular">
+        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
 				yang dibagikan secara gratis.
 			</p>
-        	<p class="text-white text-sm md:text-2xl bg-black bg-opacity-100 general-sans-regular">
+        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
 				Majalah yang ditulis dan digambar oleh kita,
 			</p>
-        	<p class="text-white text-sm md:text-2xl bg-black bg-opacity-100 general-sans-regular mb-20 md:mb-0">
+        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular mb-20 sm:mb-0">
 				untuk kita dan komunitas di sekitar kita.
 			</p>
        	</div>
 		<div class="absolute bottom-4 right-4"> 
-        <p class="text-black md:text-xl text-sm bg-opacity-100 general-sans-regular">
+        <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
             Arts by Yuzu Hoshizora
         </p>
         <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
@@ -57,6 +54,3 @@
 	</div>-->
 </body>
 </html>
-<script>
-    console.log('Width:', window.innerWidth); // Check the width in console
-</script>
