fix some issues with text, div overlay

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				untuk kita dan komunitas di sekitar kita.
 			</p>
        	</div>
-		<div class="absolute bottom-4 right-4"> 
+	</div>
+	<div class="absolute bottom-4 right-4"> 
         <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
             Arts by Yuzu Hoshizora
         </p>
