--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 </head>
 <body class="bg-black overflow-x-hidden">
 	<div class="bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.jpg');">
-		<div class="flex flex-col items-start justify-end sm:justify-center ml-5 sm:p-20 h-full">
-        	<h1 class="text-white text-4xl sm:text-7xl bg-black bg-opacity-100 general-sans-semi-bold sm:mt-20">UsWorks</h1>
+		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-full">
+        	<h1 class="text-white text-4xl sm:text-7xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">UsWorks</h1>
 			<br>
         	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
 				UsWorks adalah majalah literatur dan seni 
@@ -32,7 +32,7 @@
         	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
 				Majalah yang ditulis dan digambar oleh kita,
 			</p>
-        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular mb-20 sm:mb-0">
+        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
 				untuk kita dan komunitas di sekitar kita.
 			</p>
        	</div>
