--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body class="bg-black overflow-x-hidden">
 	<div class="bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.jpg');">
-		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-full">
+		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-screen">
         	<h1 class="text-white text-4xl sm:text-7xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">UsWorks</h1>
 			<br>
         	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
@@ -36,15 +36,15 @@
 				untuk kita dan komunitas di sekitar kita.
 			</p>
        	</div>
+		<div class="absolute bottom-4 right-4"> 
+    	    <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
+    	        Arts by Yuzu Hoshizora
+    	    </p>
+    	    <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
+    	        Website by Chi
+			</p>
+    	</div>
 	</div>
-	<div class="absolute bottom-4 right-4"> 
-        <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
-            Arts by Yuzu Hoshizora
-        </p>
-        <p class="text-black sm:text-xl text-sm bg-opacity-100 general-sans-regular">
-            Website by Chi
-		</p>
-    </div>
     <!--<div>
         HELLO
 	</div>-->
