--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-screen">
         	<h1 class="text-white text-4xl sm:text-7xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">UsWorks</h1>
 			<br>
-        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
 				UsWorks adalah majalah literatur dan seni 
 			</p>
-        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
 				yang dibagikan secara gratis.
 			</p>
-        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
 				Majalah yang ditulis dan digambar oleh kita,
 			</p>
-        	<p class="text-white text-sm sm:text-2xl bg-black bg-opacity-100 general-sans-regular">
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
 				untuk kita dan komunitas di sekitar kita.
 			</p>
        	</div>
