--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-black overflow-x-hidden">
+<body class="overflow-x-hidden">
 	<div class="bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.jpg');">
 		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-screen">
         	<h1 class="text-white text-4xl sm:text-7xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">UsWorks</h1>
@@ -45,13 +45,82 @@
 			</p>
     	</div>
 	</div>
-    <!--<div>
-        HELLO
-	</div>-->
-    <!--<div class="bg-cover bg-fixed bg-center h-screen" style="background-image: url('img/sky.jpg');">
-   	    <div class="flex items-center justify-center h-full">
-   	        <h1 class="text-white text-4xl bg-black bg-opacity-100 p-1 general-sans-semi-bold">UsWorks</h1>
-   	    </div>
-	</div>-->
+	<div class="p-4">
+		<div class="flex flex-col items-center justify-center mb-20">
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">
+				Majalah yang memiliki
+			</p>
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+				satu tujuan utama:
+			</p>
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+				untuk dibaca.
+			</p>
+        	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center">
+				Kita tidak berkarya untuk uang. 
+				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pembaca.
+				Bagi kita, rasa yang seorang penulis atau seniman rasakan saat pembaca atau 
+				pengamat ー walaupun hanya seorang ー
+				tersentuh dengan karyanya yang jujur lebih berharga daripada uang satu milyar pun.
+			</p>
+		</div>
+	</div>
+	<div class="bg-cover w-full bg-fixed h-screen bg-bottom" style="background-image: url('img/sky.jpg');">
+		<div class="flex flex-col items-end justify-start mr-5 sm:p-20 h-screen">
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">
+				Hubungan antar
+			</p>
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+				kreator dan pengamat
+			</p>
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+				yang lebih dekat.
+			</p>
+			<br>
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+				Hubungan penulis dan seniman jadi lebih 
+			</p>
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+				dekat dengan pembaca dan pengamatnya
+			</p>
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+				berkat adanya motivasi tadi.
+			</p>
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+				Kreator menuangkan diri mereka
+			</p>
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+				ke dalam karya dan
+			</p>
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+				pembaca meresapi karya itu, tanpa ada
+			</p>
+        	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
+				sangkut paut materi di dalamnya.
+			</p>
+       	</div>
+	</div>
+	<div class="p-4">
+		<div class="flex flex-col items-center justify-center mb-20">
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">
+				Diatur secara objektif
+			</p>
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+				sekaligus subjektif
+			</p>
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+				demi menjaga kualitas.
+			</p>
+        	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center">
+				Setiap karya yang masuk ke majalah UsWorks akan diteliti, direvisi,
+				dan dirapikan. Semua proses itu dijalani melalui diskusi bersama para kreator
+				secara objektif tanpa menghiraukan pendapat kreator.
+				Kita percaya bahwa setiap karya memiliki makna tersendiri dan editor hanya
+				bertugas untuk merapikan pembungkus dari makna tersebut, bukan justru mengubah makna.
+				<br>
+				Semuanya tanpa biaya.
+			</p>
+		</div>
+	</div>
 </body>
 </html>
