fix text layout in the white spaces

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
 				untuk dibaca.
 			</p>
-        	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center">
+        	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
 				Kita tidak berkarya untuk uang. 
 				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pembaca.
 				Bagi kita, rasa yang seorang penulis atau seniman rasakan saat pembaca atau 
@@ -111,7 +111,7 @@
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
 				demi menjaga kualitas.
 			</p>
-        	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center">
+        	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center sm:w-2/4">
 				Setiap karya yang masuk ke majalah UsWorks akan diteliti, direvisi,
 				dan dirapikan. Semua proses itu dijalani melalui diskusi bersama para kreator
 				secara objektif tanpa menghiraukan pendapat kreator.
