--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 			</p>
         	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
 				Kita tidak berkarya untuk uang. 
-				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pembaca.
+				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pemerhati.
 				Bagi kita, rasa yang seorang penulis atau seniman rasakan saat pembaca atau 
-				pengamat ー walaupun hanya seorang ー
+				pemerhati ー walaupun hanya seorang ー
 				tersentuh dengan karyanya yang jujur lebih berharga daripada uang satu milyar pun.
 			</p>
 		</div>
@@ -71,7 +71,7 @@
 				Hubungan antar
 			</p>
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
-				kreator dan pengamat
+				kreator dan pemerhati
 			</p>
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
 				yang lebih dekat.
@@ -81,7 +81,7 @@
 				Hubungan penulis dan seniman jadi lebih 
 			</p>
         	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
-				dekat dengan pembaca dan pengamatnya
+				dekat dengan pembaca dan pemerhatinya
 			</p>
         	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
 				berkat adanya motivasi tadi.
@@ -93,7 +93,7 @@
 				ke dalam karya dan
 			</p>
         	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
-				pembaca meresapi karya itu, tanpa ada
+				pemerhati meresapi karya itu, tanpa ada
 			</p>
         	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
 				sangkut paut materi di dalamnya.
@@ -122,5 +122,6 @@
 			</p>
 		</div>
 	</div>
+	<!-- Mari bersama kita ciptakan dan nikmati karya kita. -->
 </body>
 </html>
