--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</p>
         	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
 				Kita tidak berkarya untuk uang. 
-				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pemerhati.
+				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pemer.
 				Bagi kita, rasa yang seorang penulis atau seniman rasakan saat pembaca atau 
 				pemerhati ー walaupun hanya seorang ー
 				tersentuh dengan karyanya yang jujur lebih berharga daripada uang satu milyar pun.
@@ -116,7 +116,7 @@
 				dan dirapikan. Semua proses itu dijalani melalui diskusi bersama para kreator
 				secara objektif tanpa menghiraukan pendapat kreator.
 				Kita percaya bahwa setiap karya memiliki makna tersendiri dan editor hanya
-				bertugas untuk merapikan pembungkus dari makna tersebut, bukan justru mengubah makna.
+				bertugas untuk merapikan bungkus dari makna tersebut, bukan justru mengubah makna.
 				<br>
 				Semuanya tanpa biaya.
 			</p>
