--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</p>
         	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
 				Kita tidak berkarya untuk uang. 
-				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pemer.
+				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pemerhati.
 				Bagi kita, rasa yang seorang penulis atau seniman rasakan saat pembaca atau 
 				pemerhati ー walaupun hanya seorang ー
 				tersentuh dengan karyanya yang jujur lebih berharga daripada uang satu milyar pun.
