--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</p>
         	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
 				Kita tidak berkarya untuk uang. 
-				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pemerhati.
+				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pembaca.
 				Bagi kita, rasa yang seorang penulis atau seniman rasakan saat pembaca atau 
 				pemerhati ー walaupun hanya seorang ー
 				tersentuh dengan karyanya yang jujur lebih berharga daripada uang satu milyar pun.
@@ -71,7 +71,7 @@
 				Hubungan antar
 			</p>
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
-				kreator dan pemerhati
+				kreator dan pembaca
 			</p>
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
 				yang lebih dekat.
@@ -93,7 +93,7 @@
 				ke dalam karya dan
 			</p>
         	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
-				pemerhati meresapi karya itu, tanpa ada
+				pembaca meresapi karya itu, tanpa ada
 			</p>
         	<p class="text-black text-sm sm:text-2xl bg-white bg-opacity-60 general-sans-regular">
 				sangkut paut materi di dalamnya.
@@ -103,7 +103,7 @@
 	<div class="p-4">
 		<div class="flex flex-col items-center justify-center mb-20">
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">
-				Diatur secara objektif
+				Dikelola secara objektif
 			</p>
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
 				sekaligus subjektif
