fixed the wording on the future text

--- a/index.html
+++ b/index.html
@@ -122,6 +122,6 @@
 			</p>
 		</div>
 	</div>
-	<!-- Mari bersama kita ciptakan dan nikmati karya kita. -->
+	<!-- Mari bersama kita jajaki karya kita. -->
 </body>
 </html>
