--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 				untuk dibaca.
 			</p>
         	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
-				Kita tidak berkarya untuk uang. 
+				Kita berkarya tidak untuk uang. 
 				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pembaca.
-				Bagi kita, rasa yang seorang penulis atau seniman rasakan saat pembaca atau 
-				pemerhati ー walaupun hanya seorang ー
-				tersentuh dengan karyanya yang jujur lebih berharga daripada uang satu milyar pun.
+				Bagi kita, perasaan yang seorang penulis atau seniman rasakan saat pembacanya atau 
+				pemerhatinya ー walaupun hanya seorang ー
+				tersentuh dengan karyanya lebih berharga daripada uang satu milyar pun.
 			</p>
 		</div>
 	</div>
@@ -113,7 +113,7 @@
 			</p>
         	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center sm:w-2/4">
 				Setiap karya yang masuk ke majalah UsWorks akan diteliti, direvisi,
-				dan dirapikan. Semua proses itu dijalani melalui diskusi bersama para kreator
+				dan dirapikan. Semua proses itu dijalankan lewat diskusi bersama para kreator
 				secara objektif tanpa menghiraukan pendapat kreator.
 				Kita percaya bahwa setiap karya memiliki makna tersendiri dan editor hanya
 				bertugas untuk merapikan bungkus dari makna tersebut, bukan justru mengubah makna.
