--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 	</div>
 	<div class="p-4">
 		<div class="flex flex-col items-center justify-center mb-20">
-        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20 text-center">
 				Majalah yang memiliki
 			</p>
-        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold text-center">
 				satu tujuan utama:
 			</p>
-        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold text-center">
 				untuk dibaca.
 			</p>
         	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center max-wd-sm mx-auto sm:w-2/4">
@@ -102,13 +102,13 @@
 	</div>
 	<div class="p-4">
 		<div class="flex flex-col items-center justify-center mb-20">
-        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">
+        	<p class="text-white text-2xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20 text-center">
 				Dikelola secara objektif
 			</p>
-        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+        	<p class="text-white text-2xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
 				sekaligus subjektif
 			</p>
-        	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+        	<p class="text-white text-2xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold text-center">
 				demi menjaga kualitas.
 			</p>
         	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center sm:w-2/4">
