--- a/index.html
+++ b/index.html
@@ -123,5 +123,51 @@
 		</div>
 	</div>
 	<!-- Mari bersama kita jajaki karya kita. -->
+	<div class="h-screen">
+		<div class="bg-cover w-full h-1/2 sm:h-screen bg-center" style="background-image: url('img/hands.png');">
+			<div class="flex flex-col items-center justify-center h-full">
+    	    	<p class="text-black text-lg sm:text-3xl general-sans-semi-bold">
+					Mari bersama kita
+				</p>
+    	    	<p class="text-black text-lg sm:text-3xl general-sans-semi-bold">
+					jajaki karya kita.
+				</p>
+    	   	</div>
+		</div>
+		<div class="p-4">
+			<div class="flex flex-col items-start justify-top mt-10 sm:mt-20 sm:ml-10">
+    	    	<p class="text-white text-md sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+					Mengirim naskah
+				</p>
+    	    	<p class="text-white text-md sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+					atau gambar.
+				</p>
+    	    	<p class="text-black text-sm sm:text-2xl general-sans-regular sm:w-2/4">
+					Majalah UsWorks menerima naskah cerpen, cerbung atau series, artikel, 
+					gambar dalam bentuk apapun, dan komik singkat semacam <i>yon-koma</i>. 
+					Silakan buka <a class="text-blue-500" href="kontribusi.html"> artikel ini </a> untuk membaca selengkapnya.
+				</p>
+
+    	    	<p class="text-white text-md sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+					Informasi tentang
+				</p>
+    	    	<p class="text-white text-md sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold">
+					pembagian majalah
+				</p>
+    	    	<p class="text-black text-sm sm:text-2xl general-sans-regular sm:w-2/4">
+					Majalah-majalah UsWorks umumnya dibagikan di sekolah-sekolah dan kampus-kampus.	
+					Silakan baca selengkapnya <a class="text-blue-500" href="pembagian.html"> di sini </a>. 
+				</p>
+
+    	    	<p class="text-white text-md sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+					Kontak
+				</p>
+    	    	<p class="text-black text-sm sm:text-2xl general-sans-regular sm:w-2/4">
+					Silakan hubungi Chi melalui email: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
+					atau, untuk respon lebih cepat, melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/kusa.ci/">kusa.ci</a>
+				</p>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
