--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 				Kita berkarya tidak untuk uang. 
 				Kita berkarya murni untuk memperlihatkan karya kita, setengah dari diri kita, kepada para pembaca.
 				Bagi kita, perasaan yang seorang penulis atau seniman rasakan saat pembacanya atau 
-				pemerhatinya ー walaupun hanya seorang ー
-				tersentuh dengan karyanya lebih berharga daripada uang satu milyar pun.
+				pemerhatinyaーwalaupun hanya seorangーtersentuh 
+				dengan karyanya lebih berharga daripada uang satu milyar pun.
 			</p>
 		</div>
 	</div>
@@ -114,7 +114,7 @@
         	<p class="text-black text-sm sm:text-2xl general-sans-regular mt-10 text-center sm:w-2/4">
 				Setiap karya yang masuk ke majalah UsWorks akan diteliti, direvisi,
 				dan dirapikan. Semua proses itu dijalankan lewat diskusi bersama para kreator
-				secara objektif tanpa menghiraukan pendapat kreator.
+				secara objektif tanpa mengabaikan pendapat kreator.
 				Kita percaya bahwa setiap karya memiliki makna tersendiri dan editor hanya
 				bertugas untuk merapikan bungkus dari makna tersebut, bukan justru mengubah makna.
 				<br>
@@ -156,15 +156,15 @@
 				</p>
     	    	<p class="text-black text-sm sm:text-2xl general-sans-regular sm:w-2/4">
 					Majalah-majalah UsWorks umumnya dibagikan di sekolah-sekolah dan kampus-kampus.	
-					Silakan baca selengkapnya <a class="text-blue-500" href="pembagian.html"> di sini </a>. 
+					Silakan baca selengkapnya <a class="text-blue-500" href="pembagian.html"> di sini</a>. 
 				</p>
 
     	    	<p class="text-white text-md sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
 					Kontak
 				</p>
-    	    	<p class="text-black text-sm sm:text-2xl general-sans-regular sm:w-2/4">
+    	    	<p class="text-black text-sm sm:text-2xl general-sans-regular sm:w-2/4 mb-20">
 					Silakan hubungi Chi melalui email: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
-					atau, untuk respon lebih cepat, melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/kusa.ci/">kusa.ci</a>
+					atau untuk respon lebih cepat, melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/kusa.ci/">kusa.ci</a>
 				</p>
 			</div>
 		</div>
