scale down the bottom-most motivational text

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
 	<div class="h-screen">
 		<div class="bg-cover w-full h-1/2 sm:h-screen bg-center" style="background-image: url('img/hands.png');">
 			<div class="flex flex-col items-center justify-center h-full">
-    	    	<p class="text-black text-lg sm:text-3xl general-sans-semi-bold">
+    	    	<p class="text-black text-md sm:text-3xl general-sans-semi-bold">
 					Mari bersama kita
 				</p>
-    	    	<p class="text-black text-lg sm:text-3xl general-sans-semi-bold">
+    	    	<p class="text-black text-md sm:text-3xl general-sans-semi-bold">
 					jajaki karya kita.
 				</p>
     	   	</div>
