add some paragagraphs

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 					Kontak
 				</p>
     	    	<p class="text-black text-sm sm:text-2xl general-sans-regular sm:w-2/4 mb-20">
-					Silakan hubungi Chi melalui email: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
+					Silakan hubungi Chi melalui <i>email</i>: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
 					atau untuk respon lebih cepat, melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/kusa.ci/">kusa.ci</a>
 				</p>
 			</div>
