--- a/kontribusi.html
+++ b/kontribusi.html
@@ -38,16 +38,130 @@
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Jadi, majalah UsWorks sedang mencari penulis yang mau cerita atau artikelnya 
 			dimuat. Kami menerima penulis dengan latar belakang dan motivasi apapun.
-			Boleh jadi kakak ingin memperbesar <i>reader base</i>
+			Boleh jadi Kakak ingin memperbesar <i>reader base</i>
 			atau sekedar ingin tulisannya dibaca oleh orang-orang. 
-			Boleh jadi juga kakak sudah lama menulis sebelum ini, 
-			baru memulai, atau malah kakak baru saja berencana untuk memulai.
+			Boleh jadi juga Kakak sudah lama menulis sebelum ini, 
+			baru memulai, atau malah Kakak baru saja berencana untuk memulai.
+			Bagaimana pun latar belakang Kakak, kami percaya pasti Kakak punya cerita yang layak
+			untuk disampaikan.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Jadi, tugas kami adalah membantu Kakak untuk memoles cerita Kakak lalu menyebarkannya. Oh ya, ada
+			kemungkinan bakal ada <i>artist</i> yang mau ngebuat ilustrasi untuk cerita Kakak, lho!
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Nah, karena kami percaya bahwa setiap orang memiliki cerita yang layak untuk disampaikan,
+			kami tidak memakai batasan tema apapun. Selama cerita Kakak tidak menyinggung
+			SARA, tidak mengandung hal-hal asusila, maka karya Kakak punya potensi untuk dimuat.
+			Untuk lebih pastinya, langsung saja hubungi Chi nanti. Kami terbuka, kok, untuk diskusi.
+			Silakan lihat lebih lanjut di seksi ketiga, ya.
+
+			Nah, untuk detailnya, berikut adalah jenis tulisan yang kami terima:
+		</p>
+		<ul class="list-disc">
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				<b>Series atau cerbung</b>: Silakan kirim series terbaik Kakak beserta keseluruhan plotnya,
+				alurnya secara garis besar, dan deskripsi karakter-karakternya. 
+				Siap-siap Kakak bakal ditanya banyak-banyak, nih ya! 
+				<br>
+				<b>Batasan kata:</b> Tiap episode kira-kira mengandung 800 kata - 1300 kata. Tentu saja batas
+				ini bisa didiskusikan nanti dengan editor.
+			</li>
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				<b>Cerpen</b>: Kita juga menerima cerpen. Kalau untuk cerpen, Kakak tidak harus mengirim detail-detail
+				cerita. Walau begitu, Kakak tetap bakal banyak ditanya soal cerpen Kakak, terutama makna di balik
+				ceritanya!
+				<br>
+				<b>Batasan kata:</b> Sama dengan cerbung, cerpen yang diserahkan harus mengandung sekitar 800 kata
+				- 1300 kata. Batasan ini juga bisa didiskusikan.
+			</li>
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				<b>Artikel</b>: Kami menerima artikel dengan tema apapun. Tidak perlu menggunakan gaya bahasa formal.
+				Jika artikel tersebut berkaitan dengan fakta objektif, kami akan meminta Kakak untuk membuktikan
+				kebenaran artikel tersebut. Jadi kalau Kakak menulis
+				soal fakta, persiapkan sumber-sumber yang terpercaya, ya!
+				<br>
+				<b>Batasan kata:</b> Batasan kata untuk artikel lebih sedikit daripada cerpen dan cerbung. Sekitar 600
+				kata - 1000 kata. Tapi sama dengan cerpen dan cerbung, batasan kata ini juga bisa didiskusikan.
+			</li>
+		</ul>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Nah, bagaimana? Tertarikkah Kakak? Kalau begitu, 
+			silakan lihat bagian ketiga untuk detail tentang pengiriman naskah, diskusi dan prosedur revisi!
 		</p>
     	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
 			Kedua, mengirim gambar atau komik.
 		</h2>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Work in progress.
+		</p>
+    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+			Ketiga, proses pemuatan karya.
+		</h2>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Kakak bisa mengirim karya Kakak, baik gambar ataupun tulisan, kepada Chi di <i>email</i>: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
+			atau untuk respon lebih cepat, melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/kusa.ci/">kusa.ci</a>.	
+			Karya Kakak akan diteliti terlebih dahulu, kalau gambar, oleh Kak Yuzu, dan kalau tulisan, oleh Chi.
+			Setelah itu, kami akan membuat <i>group chat</i> di Whatsapp, Instagram, atau Discord, menyertakan Kakak,
+			Chi, dan Kak Yuzu. Pertama sekali, kami akan meminta Kakak untuk menandatangani perjanjian terkait hak cipta
+			dan bayaran.
+			Nah, selanjutnya, kita akan membahas setiap aspek dari karya Kakak di grup itu. 
+			<br>
+			Yang jelas, tidak ada karya yang akan ditolak mentah-mentah tanpa diskusi. 
+			<br>
+			Di dalam grup, Chi dan Kak Yuzu akan banyak bertanya mengenai karya Kakak dan
+			mendiskusikan hal-hal yang bisa ditingkatkan.
+			Demi kemudahan, jika karya tersebut berbentuk tulisan, Chi akan membuat dokumen Google Docs 
+			(atau platform lain yang Kakak ingin pakai) lalu menyalin tulisan Kakak di dalamnya. Dokumen itu
+			akan digunakan sebagai basis kerja bagi Kakak.
+			untuk merevisi tulisan Kakak. Jangan khawatir, kami akan mengajarkan Kakak cara
+			menggunakan Google D
+		</p>
+
+    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+			FAQ
+		</h2>
+    	<h2 class="text-white text-md sm:text-1xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+			Karya di luar yang telah disebutkan di atas.
+		</h2>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			"Wah, lalu bagaimana kalau aku punya karya yang jenisnya tidak disebutkan di atas?"
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Jangan khawatir! Batasan yang kami berikan tidak bersifat mutlak. Semuanya bisa kita diskusikan. Selama 
+			Kakak menaruh jerih payah Kakak ke dalam karya Kakak, maka karya itu punya potensi untuk dimuat.
+		</p>
+    	<h2 class="text-white text-md sm:text-1xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+			Hak cipta dan lisensi.
+		</h2>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			"Bagaimana dengan hak cipta dari karya-karya yang ada di dalam majalah UsWorks?"
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Kakak bebas mendaftarkan hak cipta dari karya Kakak atas nama Kakak atau memilih lisensi yang telah tersedia
+			dengan syarat Kakak mengizinkan majalah UsWorks untuk menyebarkan karya Kakak secara tertulis.
+			Untuk informasi lebih lanjut tentang mendaftarkan hak cipta atas karya Kakak, silakan lihat 
+			<a class="text-blue-500" href="https://indonesia.go.id/kategori/kepabeanan/431/cara-mengurus-hak-cipta">
+				tautan ini
+			</a>
+			.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Sedangkan jika Kakak tidak mendaftarkan hak cipta atau tidak memperincikan lisensi yang Kakak ingin pakai
+			untuk karya Kakak, maka
+			karya yang dimuat di dalam majalah UsWorks otomatis berada di bawah naungan lisensi CC BY 4.0, 
+			Creative Commons Attribution 4.0, yang kami sertakan atas nama Kakak. 
+			Kakak bisa mengubah lisensi ini setelah adanya beberapa perubahan terhadap
+			karya Kakak. Akan tetapi, versi-versi dari karya Kakak sebelum perubahan tersebut dibuat akan tetap
+			berada di bawah naungan lisensi CC BY 4.0.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Creative Commons Attribution 4.0 sendiri adalah lisensi <i>non-profit</i> yang memperbolehkan
+			orang lain untuk menyebarkan dan mengadaptasi karya Kakak walau untuk kepentingan komersil, dengan
+			syarat ia harus mencatumkan nama Kakak, tautan terhadap lisensi, dan perubahan yang telah ia buat.
+			Silakan buka
+			<a class="text-blue-500" href="https://creativecommons.org/licenses/by/4.0/deed.id">tautan ini</a>
+			untuk informasi lebih lanjut.
 		</p>
     </div>
 </body>
