add paragraphs to contribution

--- a/kontribusi.html
+++ b/kontribusi.html
@@ -25,16 +25,17 @@
     	<h1 class="text-white text-2xl sm:text-5xl bg-black bg-opacity-100 general-sans-semi-bold">
 			UsWorks.
 		</h1>
-    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
-			Pertama, mengirim tulisan.
-		</h2>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Haiii, aku Chi, editor dari majalah UsWorks.
+			Haiii, aku Chi, editor utama dari majalah UsWorks.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Sebelumnya, terima kasih udah mau mengunjungi website kami. Terima kasih lebih banyak lagi udah menaruh
-			perhatian pada majalah UsWorks ini.
+			perhatian pada majalah UsWorks ini. Di artikel ini, Chi akan menjelaskan prosedur pengiriman dan
+			pemuatan karya di majalah UsWorks
 		</p>
+    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+			Pertama, mengirim tulisan.
+		</h2>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Jadi, majalah UsWorks sedang mencari penulis yang mau cerita atau artikelnya 
 			dimuat. Kami menerima penulis dengan latar belakang dan motivasi apapun.
@@ -43,26 +44,29 @@
 			Boleh jadi juga Kakak sudah lama menulis sebelum ini, 
 			baru memulai, atau malah Kakak baru saja berencana untuk memulai.
 			Bagaimana pun latar belakang Kakak, kami percaya pasti Kakak punya cerita yang layak
-			untuk disampaikan.
+			untuk disampaikan. Tugas kami adalah membantu Kakak untuk memoles cerita Kakak lalu menyebarkannya. 
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Jadi, tugas kami adalah membantu Kakak untuk memoles cerita Kakak lalu menyebarkannya. Oh ya, ada
-			kemungkinan bakal ada <i>artist</i> yang mau ngebuat ilustrasi untuk cerita Kakak, lho!
+			Oh ya, ada kemungkinan bakal ada <i>artist</i> yang mau ngebuat ilustrasi untuk cerita Kakak, lho!
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Nah, karena kami percaya bahwa setiap orang memiliki cerita yang layak untuk disampaikan,
 			kami tidak memakai batasan tema apapun. Selama cerita Kakak tidak menyinggung
-			SARA, tidak mengandung hal-hal asusila, maka karya Kakak punya potensi untuk dimuat.
+			SARA, tidak mengandung hal-hal asusila, dan tidak mengandung
+			pencemaran nama baik dari suatu individu atau instansi tertentu, maka karya Kakak punya 
+			potensi untuk dimuat.
 			Untuk lebih pastinya, langsung saja hubungi Chi nanti. Kami terbuka, kok, untuk diskusi.
-			Silakan lihat lebih lanjut di seksi ketiga, ya.
-
-			Nah, untuk detailnya, berikut adalah jenis tulisan yang kami terima:
+			Informasi terkait diskusi dengan tim UsWorks ada di bagian ketiga,
+			silakan lihat lebih lanjut di sana, ya.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Untuk detailnya, berikut adalah jenis tulisan yang kami terima:
 		</p>
 		<ul class="list-disc">
 			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
 				<b>Series atau cerbung</b>: Silakan kirim series terbaik Kakak beserta keseluruhan plotnya,
 				alurnya secara garis besar, dan deskripsi karakter-karakternya. 
-				Siap-siap Kakak bakal ditanya banyak-banyak, nih ya! 
+				Siap-siap Kakak bakal ditanya banyak-banyak, nih, ya! 
 				<br>
 				<b>Batasan kata:</b> Tiap episode kira-kira mengandung 800 kata - 1300 kata. Tentu saja batas
 				ini bisa didiskusikan nanti dengan editor.
@@ -87,13 +91,80 @@
 		</ul>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Nah, bagaimana? Tertarikkah Kakak? Kalau begitu, 
-			silakan lihat bagian ketiga untuk detail tentang pengiriman naskah, diskusi dan prosedur revisi!
+			silakan lihat bagian ketiga untuk detail tentang pengiriman naskah, diskusi, dan prosedur revisi!
 		</p>
     	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
 			Kedua, mengirim gambar atau komik.
 		</h2>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Work in progress.
+			Nah, hal gambar-menggambar adalah bagian Kak Yuzu.
+			Perkenalkan, Kak Yuzu adalah ilustrator dan desainer utama dari majalah UsWorks. Lihat gambar-gambar
+			yang ada di website ini? Itu Kak Yuzu yang buat lho!
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Majalah UsWorks menerima semua bentuk lukisan atau ilustrasi asalkan gambar tersebut bisa dipajang
+			di atas kertas. Bisa jadi itu karya abstrak, lukisan pemandangan, ilustrasi <i>anime</i>, komik pendek, 
+			atau bahkan <i>pixel art</i>.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Kami percaya bahwa setiap gambar memiliki makna tersendiri. Jadi, sama
+			dengan tulisan, tidak ada tema yang membatasi Kakak. Boleh banget Kakak menggambar OC Kakak, menggambar
+			<i>fanart</i> dari karakter kesukaan Kakak, menggambar <i>scene</i> dari film favorit Kakak,
+			atau bahkan karikatur terkait kejadian baru-baru ini. Asalkan gambar Kakak tidak menyinggung
+			SARA, tidak mengandung hal-hal asusila, dan tidak mengandung
+			pencemaran nama baik dari suatu individu atau instansi tertentu, maka gambar Kakak punya potensi
+			untuk dimuat! Untuk pastinya, kita bisa berdiskusi dahulu, kok. Alur diskusi akan dijelaskan di bagian
+			setelah ini, silakan lihat di sana, ya!
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Gambar Kakak akan dicetak di atas kertas A5. Berikut adalah petunjuk ukuran gambarnya:
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			<b>Ukuran dasar:</b> Ukuran dasar adalah 1754 x 2480, boleh rebah (<i>landscape</i>) dan
+			dan boleh tegak (<i>portrait</i>). Untuk selain <i>pixel art</i>, ukuran dasar adalah ukuran minimal.
+			Sedangkan untuk <i>pixel art</i>, ukuran gambar bebas, boleh lebih besar 
+			dan boleh lebih kecil daripada ukuran dasar,
+			asalkan sama dengan rasio di atas.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			<b>Ukuran selain dari yang disebutkan di atas harus masih berada di dalam rasio yang sama.
+			Misal: 2631 x 3720, di mana lebar dan tinggi dari ukuran dasar di sini sama-sama dikali 1,5.</b>
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Ingat, kalau Kakak mau menggunakan ukuran yang lebih kecil atau lebih besar daripada ukuran dasar, 
+			caranya adalah dengan
+			mengali atau membagi lebar dan tinggi dari ukuran dasar dengan satu angka yang sama. Misalnya, kalau
+			Kakak mau membuat gambar <i>pixel art</i> yang lebih kecil daripada ukuran dasar, Kakak bisa membagi
+			lebar dan tinggi dari ukuran dasar dengan dua. Sehingga, ukuran baru menjadi 1315,5 x 1860. Nah, ukuran 
+			baru ini bisa menjadi ukuran kanvas Kakak. Kalau masih belum kecil, silakan bagi lagi dengan dua.
+			Cara membesarkan juga sama. Hanya saja untuk membesarkan, alih-alih dibagi, lebar 
+			dan tinggi dikalikan dengan satu angka yang sama. Misalnya, kalau Kakak mau kanvas yang setengah
+			kali lebih besar daripada ukuran dasar, maka Kakak bisa mengalikan dengan 1,5, sehingga ukuran
+			kanvas Kakak menjadi 2631 x 3720.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			<b>"Kalau ukurannya harus beda, bagaimana?"</b>
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Tak apa-apa! Akan kita diskusikan cara kita menyesuaikan gambar tersebut di atas kertas A5. 
+			Yang penting, Kakak
+			menumpahkan jiwa Kakak ke atas gambar tersebut, dengan jerih payah dan keringat yang menetes. Nah,
+			kalau sudah begitu, karya Kakak pastinya punya potensi untuk dimuat di majalah UsWorks. 
+			Aturan kami cukup longgar, kok!
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			<b>Opsional</b>: Kalau Kakak bersedia, kami akan mengirimkan kepada Kakak beberapa naskah 
+			yang dikirim ke UsWorks. 
+			Kakak bisa memilih satu naskah atau lebih, lalu Kakak bisa menggambar ilustrasi dari cerita tersebut. 
+			Tidak banyak-banyak, kok. Cuma satu ilustrasi untuk satu naskah. 
+			Bayangkan bagaimana rasanya membuat suatu karakter, momen, atau <i>scenery</i>
+			dari cerita yang Kakak sukai menjadi hidup dengan gambar Kakak!
+			<br>
+			<small>*Ini opsional. Hanya jika Kakak mau.</small>
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Begitulah! Siapkah Kakak untuk mengirimkan gambar terbaik Kakak ke majalah UsWorks? Silakan 
+			lihat bagian ketiga untuk detail cara mengirimkan karya dan proses diskusi pemuatan karya.
 		</p>
     	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
 			Ketiga, proses pemuatan karya.
@@ -102,20 +173,25 @@
 			Kakak bisa mengirim karya Kakak, baik gambar ataupun tulisan, kepada Chi di <i>email</i>: <a class="text-blue-500" href="mailto:ciii1@proton.me"> ciii1@proton.me </a> 
 			atau untuk respon lebih cepat, melalui Instagram: <a class="text-blue-500" href="https://www.instagram.com/kusa.ci/">kusa.ci</a>.	
 			Karya Kakak akan diteliti terlebih dahulu, kalau gambar, oleh Kak Yuzu, dan kalau tulisan, oleh Chi.
-			Setelah itu, kami akan membuat <i>group chat</i> di Whatsapp, Instagram, atau Discord, menyertakan Kakak,
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			<b> Ingat, tidak ada karya yang ditolak tanpa diskusi. </b>
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Setelah itu, kami akan membuat <i>group chat</i> di Whatsapp, Instagram, atau Discord (tergantung
+			pilihan Kakak nanti), menyertakan Kakak,
 			Chi, dan Kak Yuzu. Pertama sekali, kami akan meminta Kakak untuk menandatangani perjanjian terkait hak cipta
 			dan bayaran.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
 			Nah, selanjutnya, kita akan membahas setiap aspek dari karya Kakak di grup itu. 
-			<br>
-			Yang jelas, tidak ada karya yang akan ditolak mentah-mentah tanpa diskusi. 
-			<br>
 			Di dalam grup, Chi dan Kak Yuzu akan banyak bertanya mengenai karya Kakak dan
-			mendiskusikan hal-hal yang bisa ditingkatkan.
+			berdiskusi mengenai hal-hal yang bisa ditingkatkan.
 			Demi kemudahan, jika karya tersebut berbentuk tulisan, Chi akan membuat dokumen Google Docs 
-			(atau platform lain yang Kakak ingin pakai) lalu menyalin tulisan Kakak di dalamnya. Dokumen itu
-			akan digunakan sebagai basis kerja bagi Kakak.
-			untuk merevisi tulisan Kakak. Jangan khawatir, kami akan mengajarkan Kakak cara
-			menggunakan Google D
+			(atau platform serupa yang Kakak ingin pakai) lalu menyalin tulisan Kakak di dalamnya. Dokumen itu
+			akan digunakan sebagai basis kerja bagi kita
+			untuk merevisi tulisan Kakak. Jangan khawatir, jika dibutuhkan, kami akan memperjelas semua
+			prosedur di dalam <i>group chat</i>, termasuk cara memakai Google Docs.
 		</p>
 
     	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
