add paragraphs to pembagian

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 					Silakan baca selengkapnya <a class="text-blue-500" href="pembagian.html"> di sini</a>. 
 				</p>
 
-    	    	<p class="text-white text-md sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+    	    	<p id="kontak" class="text-white text-md sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
 					Kontak
 				</p>
     	    	<p class="text-black text-sm sm:text-2xl general-sans-regular sm:w-2/4 mb-20">
