--- a/pembagian.html
+++ b/pembagian.html
@@ -26,10 +26,123 @@
 			UsWorks.
 		</h1>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Haiii, terima kasih udah mampir.
+			Haiii, terima kasih udah mampir! Terima kasih lebih banyak lagi udah mau menaruh perhatian ke
+			majalah UsWorks ini. Untuk saat ini, kami mempunyai dua sistem pendistribusian:
+		</p>
+    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+			Pertama, pembagian gratis.
+		</h2>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Untuk sirkulasi di Padang, Sumatera Barat, majalah UsWorks umumnya dibagikan 
+			di kampus-kampus, sekolah-sekolah, dan komunitas-komunitas dengan sistem
+			pinjam-meminjam. Sehingga, sirkulasi majalah UsWorks itu merangkak dari orang ke orang, dari
+			teman ke teman, dan dari <i>circle</i> ke <i>circle</i>. Dalam sistem ini, tidak
+			ada satu individu tertentu yang memiliki majalah UsWorks secara mutlak. Jika Kakak ingin
+			memiliki majalah UsWorks secara pribadi, silakan lihat bagian kedua dari artikel ini.
 		</p>
     	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
-			Majalah UsWorks dibagikan di kampus-kampus...
+			Dalam sistem distribusi ini, kami membagikan satu-dua eksemplar kepada 
+			satu-dua orang dari tiap sekolah atau komunitas.
+			Orang-orang nan dermawan lagi mulia ini kami sebut sebagai distributor.
+			Nantinya, distributor
+			akan meminjamkan majalah UsWorks kepada teman-teman dan rekan-rekan yang ada di 
+			sekolah atau komunitasnya.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Jadi, kalau Kakak ingin membaca majalah UsWorks secara gratis, pilihan Kakak ada dua:
+		</p>
+		<ul class="list-disc">
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				Menjadi distributor.
+			</li>
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				Atau mencari distributor yang ada di sekolah atau komunitas Kakak.
+			</li>
+		</ul>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Untuk mencari distributor di sekolah atau komunitas Kakak, silakan hubungi Chi  
+			<a class="text-blue-500" href="./index.html#kontak">
+				di sini
+			</a>. 
+			Setelah itu, Kakak bisa masuk <i>group chat</i> dari distribusi majalah UsWorks di sekolah atau
+			komunitas Kakak. Di dalam grup, kita bisa bersama membaca dan membahas
+			bacaan-bacaan seru dan gambar-gambar indah yang dimuat di majalah. 
+			Membaca lebih seru bersama, ya kan?
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Sedangkan kalau belum ada distributor di sekolah Kakak, maka pilihan yang tersisa adalah
+			Kakak sendiri yang menjadi distributor.
+			Kalau Kakak bersedia untuk mengiklankan dan meminjamkan
+			majalah UsWorks kepada teman-teman Kakak,
+			maka kami akan dengan senang hati memberikan satu-dua eksemplar kepada Kakak. Berikut adalah syaratnya:
+		</p>
+		<ul class="list-disc">
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				Belum ada majalah UsWorks yang diedarkan di sekolah Kakak. 
+			</li>
+			<li class="text-black text-sm sm:text-lg general-sans-regular mt-5">
+				Minimal ada dua teman Kakak dari sekolah atau komunitas yang sama yang tertarik untuk ikut 
+				membaca majalah UsWorks. Kedua teman Kakak ini harus memiliki akun media sosial dan bersedia
+				masuk <i>group chat</i> Whatsapp, Instagram, atau Discord (sesuai pilihan Kakak). 
+				Di dalam grup tersebut, akan kami sertakan tim majalah UsWorks, Kakak, dan teman-teman Kakak tadi.
+				Kalau ada teman baru yang ingin ikut membaca belakangan, ia boleh ikut masuk 
+				ke dalam grup tersebut.
+				Sehingga, setiap komunitas atau sekolah memiliki <i>group chat</i> tersendiri untuk berkomunikasi.
+				Kalau komunitas pembaca di dalam grup Kakak sudah cukup besar, maka kami akan memberikan lebih
+				banyak eksemplar untuk dibagikan.
+			</li>
+		</ul>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Nah, dengan begini, kita bisa berbagi kesenangan dalam kegemaran kita untuk membaca.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Eits, tapi kami sadar, tidak semua orang suka membaca bersama. Sehingga, majalah UsWorks
+			juga memberikan opsi kedua.
+		</p>
+    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+			Kedua, pembelian pribadi.
+		</h2>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Kalau Kakak ingin memiliki majalah ini secara pribadi, tidak dibagikan, maka Kakak bisa membeli cetakan
+			dari majalah UsWorks. 
+			Satu eksemplar berharga sekitar Rp 60.000
+			sampai Rp 70.000. Cetakan yang ini mutlak kepimilikannya bagi Kakak. 
+			<b>Perlu diingat, kami sama sekali tidak mengambil
+				untung dari pembelian Kakak.</b> Uang yang Kakak bayarkan murni kami pergunakan untuk biaya 
+			percetakan dari satu cetakan majalah yang Kakak pesan beserta biaya pengirimannya.	
+			Kami menggunakan sistem percetakan laser, sehingga harga satu eksemplar kami jadi sedikit lebih mahal dibanding
+			dengan satu eksemplar yang dicetak dengan mesin cetak plat.
+			Kalau Kakak tertarik untuk membeli, silakan hubungi Chi. Kontak Chi tersedia 
+			<a class="text-blue-500" href="./index.html#kontak">
+			di sini
+			</a>.
+		</p>
+    	<h2 class="text-white text-1xl sm:text-3xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+			FAQ
+		</h2>
+    	<h2 class="text-white text-md sm:text-1xl bg-black bg-opacity-100 general-sans-semi-bold mt-10">
+			Kenapa harus bayar di opsi kedua?
+		</h2>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			"Bukankah majalah UsWorks itu tadi katanya dibagikan gratis? Mengapa aku harus bayar kalau
+			ingin pakai opsi kedua?"
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Aku harus memperinci kata "dibagikan" di sini. Kata "dibagikan" di sini kami maksudkan bukan
+			berlaku hanya untuk
+			tim majalah UsWorks. Tapi kami berharap juga berlaku untuk Kakak, pembaca yang budiman. 
+			Sehingga, harapan kami adalah, kalau majalah UsWorks
+			membagikan satu eksemplar kepada Kakak, Kakak juga membagikan satu eksemplar tersebut kepada
+			teman-teman Kakak. Dengan begitu, terbentuklah alur sirkulasi majalah yang terus berjalan.
+			Dengan begitu juga, keterikatan antar Kakak dan pembaca lain juga semakin erat. Kami tidak hanya ingin
+			membagikan tulisan, tapi juga mempererat hubungan antar penggemar literatur dan seni.
+		</p>
+    	<p class="text-black text-sm sm:text-lg bg-white bg-opacity-60 general-sans-regular mt-5">
+			Nah, sayangnya, hal itu tidak akan terwujud jika Kakak ingin memiliki majalah UsWorks secara
+			pribadi dan mutlak. Sehingga, kami terpaksa harus mencetak satu cetakan baru. Satu cetakan baru yang
+			dicetak khusus untuk Kakak. Untuk mencetak itu, kami membutuhkan biaya. Dan untuk mengirimnya kepada
+			Kakak, kami juga butuh biaya. Perlu diingat kembali, kami tidak mengambil untung sepeser
+			pun dari pembelian Kakak.
 		</p>
     </div>
 </body>
