--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="overflow-x-hidden">
-	<div class="bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.jpg');">
+	<div class="bg-cover w-full bg-fixed h-screen img-sm sm:bg-top" style="background-image: url('img/classroom.webp');">
 		<div class="flex flex-col items-start justify-center ml-5 sm:p-20 h-screen">
         	<h1 class="text-white text-4xl sm:text-7xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">UsWorks</h1>
 			<br>
@@ -65,7 +65,7 @@
 			</p>
 		</div>
 	</div>
-	<div class="bg-cover w-full bg-fixed h-screen bg-bottom" style="background-image: url('img/sky.jpg');">
+	<div class="bg-cover w-full bg-fixed h-screen bg-bottom" style="background-image: url('img/sky.webp');">
 		<div class="flex flex-col items-end justify-start mr-5 sm:p-20 h-screen">
         	<p class="text-white text-3xl sm:text-4xl bg-black bg-opacity-100 general-sans-semi-bold mt-20">
 				Hubungan antar
@@ -124,7 +124,7 @@
 	</div>
 	<!-- Mari bersama kita jajaki karya kita. -->
 	<div class="h-screen">
-		<div class="bg-cover w-full h-1/2 sm:h-screen bg-center" style="background-image: url('img/hands.png');">
+		<div class="bg-cover w-full h-1/2 sm:h-screen bg-center" style="background-image: url('img/hands.webp');">
 			<div class="flex flex-col items-center justify-center h-full">
     	    	<p class="text-black text-md sm:text-3xl general-sans-semi-bold">
 					Mari bersama kita
